cabal-version:      3.6
name:               hs-nlp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nathan Bedell
maintainer:         nbedell@tulane.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hs-nlp
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        HsNLP.Transducers
      , HsNLP.NGram
      , HsNLP.Classifiers
      , HsNLP.Tokenization
      , HsNLP.DistributionalSemantics
    default-extensions:
        RecordWildCards
      , ScopedTypeVariables
      , DataKinds
    build-depends: 
        base
      , semigroupoids
      , data-default
      , hashtables
      , containers
      , tensors
      , hmatrix
      , directory
      , hmatrix-svdlibc
    hs-source-dirs:   app
    default-language: GHC2021
